change compare btn style

--- a/productOpen.html
+++ b/productOpen.html
@@ -664,8 +664,8 @@
                         </a>
                     </div>
                     <a class="font-12 text-uppercase font-black compare-btn" href="compare.html">
-                        <input type="radio" name="compare">
-                        <span>CLICK TO COMPARE BIKES</span>
+                        <input class="cursor-pointer" type="radio" name="compare" id="compare-bikes">
+                        <label class="cursor-pointer" for="compare-bikes">CLICK TO COMPARE BIKES</label>
                     </a>
                 </div>
             </div>
