update js and html

--- a/productOpen.html
+++ b/productOpen.html
@@ -519,7 +519,6 @@
         </div>
     </header>
 
-
     <!----- Product Overview section ----->
     <section class="overflow-hidden product-overview-section">
         <div class="container">
@@ -679,7 +678,7 @@
                 <button class="h2 btn bg-black-btn cursor-pointer text-uppercase border-none conversion-btn" data-modal="finance-modal">
                     <span>FINANCE CALCULATOR</span>
                 </button>
-                <div class="modal scroll-bar" id="finance-modal">
+                <div class="modal" id="finance-modal">
                     <div class="modal-dialog modal-wrapper">
                         <div class="icon-btn icon-btn-small bg-black font-white cursor-pointer modal-close-btn">
                             <svg class="icon-btn-content modal-close-btn-icon lucide lucide-x-icon lucide-x" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="square" stroke-linejoin="round">
@@ -770,7 +769,7 @@
                 <button class="h2 btn primary-btn cursor-pointer text-uppercase border-none conversion-btn" data-modal="part-ex">
                     <span>PART EX MY BIKE</span>
                 </button>
-                <div class="modal scroll-bar" id="part-ex">
+                <div class="modal" id="part-ex">
                     <div class="modal-dialog part-ex-wrapper">
                         <div class="icon-btn icon-btn-small bg-black font-white cursor-pointer modal-close-btn">
                             <svg class="icon-btn-content modal-close-btn-icon lucide lucide-x-icon lucide-x" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="square" stroke-linejoin="round">
