--- a/productCategory.html
+++ b/productCategory.html
@@ -992,23 +992,23 @@
                         </button>
                     </form>
                     <div class="footer-social-media-wrapper">
-                        <div class="icon-btn icon-btn-medium icon-btn-primary">
+                        <a class="icon-btn icon-btn-medium icon-btn-primary" href="javascript:void(0);">
                             <svg class="icon-btn-content footer-media-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8.046 17.237">
                                 <path id="Path_17428" data-name="Path 17428" d="M349.745,246.886v2.372H348v2.9h1.738v8.623h3.571v-8.622h2.4s.228-1.392.334-2.912h-2.715v-1.987a.843.843,0,0,1,.775-.695h1.946v-3.021h-2.644c-3.747,0-3.659,2.9-3.659,3.338Z" transform="translate(-348.004 -243.546)" fill="currentColor" />
                             </svg>
-                        </div>
-                        <div class="icon-btn icon-btn-medium icon-btn-primary">
+                        </a>
+                        <a class="icon-btn icon-btn-medium icon-btn-primary" href="javascript:void(0);">
                             <svg class="icon-btn-content footer-media-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18.111 14.712">
                                 <path id="Path_17427" data-name="Path 17427" d="M464.465,247.107a7.427,7.427,0,0,1-2.133.587,3.741,3.741,0,0,0,1.634-2.057,7.41,7.41,0,0,1-2.365.9,3.715,3.715,0,0,0-6.422,2.542,3.877,3.877,0,0,0,.1.846,10.55,10.55,0,0,1-7.66-3.881,3.715,3.715,0,0,0,1.15,4.957,3.66,3.66,0,0,1-1.679-.463v.045a3.725,3.725,0,0,0,2.978,3.647,3.832,3.832,0,0,1-.978.126,3.769,3.769,0,0,1-.7-.065,3.729,3.729,0,0,0,3.47,2.581,7.468,7.468,0,0,1-4.615,1.586,8.012,8.012,0,0,1-.884-.049,10.567,10.567,0,0,0,16.265-8.9l-.011-.481a7.491,7.491,0,0,0,1.857-1.924Z" transform="translate(-446.355 -245.367)" fill="currentColor" />
                             </svg>
-                        </div>
-                        <div class="icon-btn icon-btn-medium icon-btn-primary">
+                        </a>
+                        <a class="icon-btn icon-btn-medium icon-btn-primary" href="javascript:void(0);">
                             <svg class="icon-btn-content footer-media-icon" id="Group_4617" data-name="Group 4617" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15.968 15.968">
                                 <path id="Path_17390" data-name="Path 17390" d="M572.72,243.552h-7.155a4.41,4.41,0,0,0-4.406,4.407v7.154a4.411,4.411,0,0,0,4.406,4.407h7.155a4.411,4.411,0,0,0,4.407-4.407v-7.154a4.411,4.411,0,0,0-4.407-4.407m2.99,11.558a2.993,2.993,0,0,1-2.99,2.99h-7.155a2.993,2.993,0,0,1-2.99-2.99v-7.154a2.993,2.993,0,0,1,2.99-2.99h7.155a2.993,2.993,0,0,1,2.99,2.99Z" transform="translate(-561.159 -243.552)" fill="currentColor" />
                                 <path id="Path_17391" data-name="Path 17391" d="M575.839,254.116a4.114,4.114,0,1,0,4.115,4.115h0a4.119,4.119,0,0,0-4.115-4.114m0,6.812a2.7,2.7,0,1,1,2.7-2.7,2.7,2.7,0,0,1-2.7,2.7" transform="translate(-567.854 -250.247)" fill="currentColor" />
                                 <path id="Path_17392" data-name="Path 17392" d="M592.867,250.838a1.039,1.039,0,1,0,.734.3,1.039,1.039,0,0,0-.734-.3" transform="translate(-580.596 -248.17)" fill="currentColor" />
                             </svg>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
