working on product video section

--- a/productOpen.html
+++ b/productOpen.html
@@ -1152,6 +1152,19 @@
         </div>
     </section>
 
+    <!----- Product Video section ----->
+    <section class="overflow-hidden product-video-section">
+        <div class="product-video-content">
+            <img class="img-cover" src="assets/images/sections/product-video-section/product-video-img-01.png" alt="product-video-img">
+            <a class="btn product-video-btn" href="javascript:void(0);">
+                <svg xmlns="http://www.w3.org/2000/svg" width="23" height="26" viewBox="0 0 23 26">
+                    <path id="Polygon_35" data-name="Polygon 35" d="M13,0,26,23H0Z" transform="translate(23) rotate(90)" fill="currentColor" />
+                </svg>
+                <span>PLAY VIDEO</span>
+            </a>
+        </div>
+    </section>
+
     <!----- Footer ----->
     <footer class="overflow-hidden">
         <div class="container">
